Fix image viewer background opacity on light theme
It's way too dark with 95%

--- a/res/themes/light/css/_light.pcss
+++ b/res/themes/light/css/_light.pcss
@@ -288,7 +288,7 @@ $eventbubble-bg-hover: var(--cpd-color-bg-subtle-secondary);
    it hardcoded to the following value */
 $lightbox-fg-color: #fff;
 $lightbox-background-bg-color: #000;
-$lightbox-background-bg-opacity: 0.95;
+$lightbox-background-bg-opacity: 0.85;
 /* ******************** */
 
 /* VoIP */
